Logo flex alignment on sm screens fix

--- a/css/main.css
+++ b/css/main.css
@@ -564,6 +564,11 @@ video {
   margin-bottom: 4rem;
 }
 
+.my-6 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
 .-mt-14 {
   margin-top: -3.5rem;
 }
@@ -906,6 +911,10 @@ video {
 
   .md\:hidden {
     display: none;
+  }
+
+  .md\:h-8 {
+    height: 2rem;
   }
 
   .md\:w-1\/2 {
